src/objects/Failed_Registration__c.object
<CustomObject>
    <description>This is object to store all failed registration transactions. These records will be used by retry scheduled batch job to retry registration.</description>
    <fields>
        <fullName>CRF_Id__c</fullName>
        <label>CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRF_Name__c</fullName>
        <label>CRF Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaXchangeId__c</fullName>
        <label>CaXchangeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1033</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1034</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsConsent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsConsent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Error_Message__c</fullName>
        <label>Last Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Run_DateTime__c</fullName>
        <label>Last Run DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Status__c</fullName>
        <label>Last Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failure</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Success_Message__c</fullName>
        <label>Last Success Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MRN__c</fullName>
        <label>MRN</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Retry__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Retry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient_Custom__c</referenceTo>
        <relationshipLabel>Failed Registrations</relationshipLabel>
        <relationshipName>Failed_Registrations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Retry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReturnId__c</fullName>
        <label>ReturnId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Failed Registrations</relationshipLabel>
        <relationshipName>Failed_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Id__c</fullName>
        <label>Study Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <label>System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trial</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>Failed Registrations</relationshipLabel>
        <relationshipName>Failed_Registrations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Failed Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Patient__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Failed Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Failed Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>